# browser39

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.sh  test_batch.jsonl  test_results.jsonl
.claude-plugin/: README.md  plugin.json
docs/: config.md  install-claude.md  install-cli.md  install-openclaw.md  jsonl-protocol.md  mcp.skill.md  watch.skill.md
examples/: browser39_tools.py  browser39_tools.rs  browser39_tools.ts
npm/browser39/: bin.js  index.d.ts  index.js  package.json
npm/browser39-darwin-arm64/: package.json
npm/browser39-darwin-x64/: package.json
npm/browser39-linux-arm64/: package.json
npm/browser39-linux-x64/: package.json
npm/browser39-win32-x64/: package.json
openclaw-plugin/: openclaw.plugin.json  package.json
src/: main.rs
src/cli/: args.rs  batch.rs  dispatch.rs  mod.rs  protocol.rs  watch.rs
src/core/: auth.rs  config.rs  dom_query.rs  dom_script.rs  error.rs  feed_to_md.rs  form.rs  html_to_md.rs  http_client.rs  mod.rs  page.rs  persistence.rs  redaction.rs  secrets.rs  session_store.rs  url.rs
src/core/dom_script/: convert.rs  document.rs  element.rs  events.rs  mod.rs  ops.rs  runtime.js  window.rs
src/mcp/: commands.rs  mod.rs  params.rs  server.rs
src/service/: mod.rs  service.rs
